front-end/src/styles/app.scss
@import "./variables";

body {
  margin: 0;
}

#app {
  //font-family: "Avenir", Helvetica, Arial, sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  text-align: center;
  color: #2c3e50;
}

#nav {
  padding: 30px;
  a {
    font-weight: bold;
    color: #2c3e50;
    &.router-link-exact-active {
      color: #42b983;
    }
  }
}

.sidebar-nav {
  background: #ddd;
  border-right: black 1px solid;
}

$sidebar-item-margin: 6px;
$content-sidebar-width: 92px;

.content-sidebar {

  height: 100%;
  width: $content-sidebar-width;
  align-items: flex-start;
  text-align: center;
  margin-bottom: 0;

  button {
    padding: 8px 0 6px 0;
    text-align: center;
    line-height: 1;
    &[class*="btn-outline"]:not(:hover) {
      background-color: $body-bg;
    }
  }

  em {
    font-size: 2.2em;
    width: auto;
  }

  span {
    display: block !important;
    font-size: 15px;
    padding-top: 4px;
    font-weight: bold;
  }

  &__item {
    height: 80px;
    width: 80px;
    margin: 0 $sidebar-item-margin $sidebar-item-margin $sidebar-item-margin;

    &.router-link-exact-active {
      color: blue;
    }

    &:first-child {
      margin-top: $sidebar-item-margin;
    }

    &:last-child {
      margin-bottom: $sidebar-item-margin;
    }

    &--red {
      background: #a61717;
    }

    &--blue {
      background: #2F96B4;
    }
  }
}

.main-logo {
  color: #fff;
  font-weight: 800;
  letter-spacing: .225em;
  transition: transform .5s ease,opacity .5s ease;
  display: inline-block;
  font-size: 0.75em;
  opacity: 1;
  padding: 0;
  position: relative;
  z-index: 1;
  font-family: "Open Sans", serif;
}

.view-project-page {
  display: flex;
  flex-direction: column;
  height: calc(100vh - 115px);
  width: 100%;

  .router-link-active {
    color: inherit !important;
    border-bottom-color: #fff !important;
    background-color: #fff !important;
  }
}

.graph-container {
  height: 100%;
  flex-grow: 1;
  text-align: initial;
}

.graph-visibility {
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  z-index: 5;
  height: 100%;
  width: 100%;
  &--hidden {
    z-index: 0;
  }
}

.view-project-page-content {
  position: relative;
  flex-grow: 1;
  border-top: 1px solid $gray-light;
}

.project {
  &-router-container {
    background-color: $body-bg;
    position: absolute;
    top: 0;
    left: 0;
    right: 0;
    bottom: 0;
    z-index: 5;
    &--hidden {
      position: relative;
      display: none;
      z-index: 0;
    }
  }

  &-sidebar-container {
    position: absolute;
    z-index: 5;
    left: 4px;
    top: 4px;
    background-color: rgba(128, 128, 128, 0.4);
    border-radius: 2px;
  }

  &-pane-overlay-container {
    position: absolute;
    z-index: 5;
    top: 4px;

    &--left {
      left: $content-sidebar-width + 8px;
    }

    &--right {
      right: 8px;
    }
  }

  &-pane-container {
    width: 100%;
    height: 100%;
    overflow: hidden;
    outline: 0;
  }
}

.editor-pane-instance,
.project-pane-container {
  &__modal-dialog {
    margin: auto;
  }

  &__modal-content {
    width: 100%;
    background-color: #fff;
    background-clip: padding-box;
    border: 1px solid rgba(0, 0, 0, 0.2);
    border-radius: 0.375rem;
    outline: 0;
  }

  &__modal-header {
    padding: 6px 8px 4px 8px;
  }

  &__close-button {
    text-shadow: 0 1px 0 #000;
  }
}

.add-block {
  &-container {
    text-align: left;
    background-color: #fff;

    .list-group-item:first-child {
      border-radius: 0;
    }
  }

  &--disabled {
    background-color: #ddd !important;
    color: #999 !important;
  }

  &__selector {
    display: flex;
    flex-direction: column;
    //width: 80px;
    //height: 120px;
    padding: 4px 8px 8px 8px;

    border-bottom: 1px solid #ccc;

    span {
      text-align: center;
      height: 60px;
      line-height: 1;
    }
  }

  &__content {
    margin-left: 8px;
    margin-bottom: 8px;
  }

  &__image {
    height: 100%;
    max-height: 72px;
    max-width: 72px;
    background-color: #fff;
    object-fit: contain;
    padding: 4px;
    border-radius: 7px;
  }
}

.add-transition-container .list-group-horizontal .list-group-item {
  &:first-child {
    border-radius: 0;
  }
  &:last-child {
    border-radius: 0;
    border-right: 1px;
  }
}

.edit-block-container {

  .form-group {
    margin-bottom: 0.5rem;
    padding-bottom: 8px;
  }

  &__scrollable {
    max-height: calc(100vh - 248px);

    box-shadow: inset 0 0 4px rgba(0,0,0,0.2);
    border: 1px solid #ccc;
    padding-left: 8px;
    padding-right: 8px;
  }

  &__form {
    &--normal {
      width: 340px;
    }
    &--wide {
      width: 640px;
    }
  }

  &__bottom-buttons {
    margin-top: 4px;
  }

  &__code-editor {
    height: 240px;
    margin-bottom: 16px;
    border-bottom: 1px dashed #eee;
  }

  &__expand-button {
    margin-bottom: 4px;
  }
}

.code-modal-editor-container {
  height: 77vh;
  //width: 90vw;
  //max-width: 1000px
}

.deploy-pane-container {
  width: 300px;
  padding: 0 8px;

  &__bottom-buttons {
    margin-top: 4px;
  }
}

.export-project-container {
  &__content {
    height: 640px;
    width: 600px;
    margin-bottom: 14px;
  }
}

.add-transition-container,
.add-block-container {
  max-width: 500px;
}

.add-transition-container {
  text-align: left;
}

.billing-button {
  margin-left: 3px;
  margin-right: 3px;
}

.billing-main-container {
  margin-top: 100px;
}

.billing-buttons-column {
  text-align: right;
  margin-top: 2px;
  width: 200px;
}

.refinery-code-editor-container {
  min-width: 200px;
  height: 240px;
  margin-bottom: 16px;
  padding-bottom: 8px;
}

// I realize this name is horrible and confusing with the lower class...
// Forgive me?
.run-lambda-pane-container {
  // This lives in the side pane
  max-width: 600px;
  padding-left: 1em;
  padding-right: 1em;

  .run-lambda-container {
    //height: 220px;
    flex-direction: column;
  }
}

.run-lambda-container {
  // This is the shared container between the Sidepane and the Full screen editor
  min-height: 250px;

  &__col {
    // Should force the blocks next to each other
    width: 100%;
    min-width: 320px;
    min-height: 200px;
    margin-bottom: -20px;
    //padding-bottom: 28px;
  }

  &__modal {
    margin-left: 8px;
  }

  &__buttons {
    margin-top: 8px;
  }

  &__expand-button {
    margin-bottom: 4px;
  }
}

.logo-fit {
  width: 100%;
}

